[WebGL] Wrong condition order in the if statement https://bugs.webkit.org/show_bug.cgi?id=125000

Patch by Przemyslaw Szymanski <p.szymanski3@samsung.com> on 2014-01-10
Reviewed by Brent Fulgham.

We should only pay the cost of string comparison once. The
current logic requires a string comparison every time we
pass through the function. Instead, by reordering the statements
we can short-circuit through the boolean test after the initial
setup is complete.

No new tests. No behaviour changes.

* platform/graphics/opengl/Extensions3DOpenGLES.cpp:
(WebCore::Extensions3DOpenGLES::supportsExtension):


Canonical link: https://commits.webkit.org/144655@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@161645 268f45cc-cd09-0410-ab3c-d52691b4dbfc